k8s/backend-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: backend-deployment
    labels:
        targetto: backend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backendapp
                  image: ourapp/backend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8000
