k8s/frontend-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
        targetto: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: nginx
                  image: ourapp/frontend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8080
