k8s/redis-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: redis-deployment
    labels:
        targetto: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis:alpine
                  ports:
                      - containerPort: 6379
