k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service

spec:
    selector:
        app: frontend
    ports:
        - port: 8080
          targetPort: 80
